--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Bookshelf</title>
+    <meta name="description" content="Team project 'Bookshelf' developed by team Cats">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -19,6 +20,6 @@
     <!-- Loads the specified .html file -->
     <load ="partials/vite-promo.html" />
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
