--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load ="partials/part-all-categories.html" />
 
     <script type="module" src="./index.js"></script>
   </body>
