--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
@@ -19,6 +20,13 @@
 
     <!-- Loads the specified .html file -->
     <load ="partials/part-all-categories.html" />
+    <load="partials/support-ukraine.html" />
+
+
+
+
+
+
 
     <script type="module" src="./index.js"></script>
   </body>
