--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <title>Home Bookshelf</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+
+    <load="partials/header.html" />
+    
     <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      <h1>Shopping List</h1>
     </section>
 
 
