--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -16,6 +16,7 @@
     </section>
 
 
-  <script type="module" src="./shoppinglist.js"></script>
+  <script type="module" src="./index.js"></script>
+
   </body>
 </html>
