--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,24 @@
     <meta name="description" content="Team project 'Bookshelf' developed by team Cats">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  
   <body>
-    <div class="wrapper">
-    <load ="partials/header.html" />
-        
-
-    <section>
-      
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <div class="main-content">
-      <div class="side-bar">
-          <load="partials/part-all-categories.html" />
-          <load="partials/support-ukraine.html" />
-      </div>
-            <load="partials/main-content-page.html" />
-     </div>
-
-        <load="partials/popup-menu.html" />
-
+    <div class="wrapper container">
+          <load ="partials/header.html" />
+    <main>
+      <section>
+            <div class="main-content">
+              <div class="side-bar">
+                <load="partials/part-all-categories.html" />
+                <load="partials/support-ukraine.html" />
+              </div>
+              <load="partials/main-content-page.html" />
+            </div>
+      </section>
+    </main>
+      <section>
+            <load="partials/popup-menu.html" />
+      </section>
 </div>
     <script type="module" src="./index.js"></script>
   </body>
