--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Bookshelf</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./img/global/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bookshelf</title>
+  <meta name="description" content="Team project 'Bookshelf' developed by team Cats">
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
   <body>
-
     <load="partials/header.html" />
-    
+   
     <section>
       <h1>Shopping List</h1>
     </section>
+<load="partials/support-ukraine.html" />
 
-
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./shoppinglist.js"></script>
 
   </body>
 </html>
