shopping list when empty

--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,16 +11,12 @@
 
 <body>
 
-  <load="partials/header.html" />
+  <load src="partials/header.html" />
 
+  <load src="partials/shopping-main.html" />
 
-  <section>
-    <p>support_ukraine</p>
-  </section>
-
-  <section class="container-shopping-list js-shopping-list"></section>
-
-
+  <script type="module" src="./index.js">
+  </script>
   <script type="module" src="./shoppinglist.js"></script>
 
 </body>
