--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,10 @@
               <load="partials/main-content-page.html" />
             </div>
       </section>
+      
     </main>
       <section>
+            <load="partials/authorization.html" />
             <load="partials/popup-menu.html" />
       </section>
 </div>
