--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -11,12 +11,12 @@
 
 <body>
 
-  <load src="partials/header.html" />
+  <div class="container wrapper">
+    <load src="partials/header.html" />
+    <load src="partials/support-ukraine.html" />
+    <load src="partials/shopping-main.html" />
+  </div>
 
-  <load src="partials/shopping-main.html" />
-
-  <script type="module" src="./index.js">
-  </script>
   <script type="module" src="./shoppinglist.js"></script>
 
 </body>
