--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -13,8 +13,10 @@
 
   <div class="container wrapper">
     <load src="partials/header.html" />
-    <load src="partials/support-ukraine.html" />
-    <load src="partials/shopping-main.html" />
+    <div class="shop-main-flex">
+      <load src="partials/support-ukraine.html" />
+      <load src="partials/shopping-main.html" />
+    </div>
   </div>
 
   <script type="module" src="./shoppinglist.js"></script>
