--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -14,7 +14,9 @@
   <div class="container wrapper">
     <load src="partials/header.html" />
     <div class="shop-main-flex">
-      <load src="partials/support-ukraine.html" />
+      <div class="shopping-list-hidden">
+        <load src="partials/support-ukraine.html" />
+      </div>
       <load src="partials/shopping-main.html" />
     </div>
   </div>
