--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <div class="main-content">
             <div class="side-bar">
               <load src="./partials/part-all-categories.html" />
-              <load src="./partials/support-ukraine.html" />
+              <!-- <load src="./partials/support-ukraine.html" /> -->
             </div>
 
             <load src="./partials/main-content-page.html" />
