--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -15,7 +15,7 @@
     <load src="partials/header.html" />
     <div class="shop-main-flex">
       <div class="shopping-list-hidden">
-        <load src="partials/support-ukraine.html" />
+        <load src="partials/su.html" />
       </div>
       <load src="partials/shopping-main.html" />
 
