--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Bookshelf</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home Bookshelf</title>
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
-
-<body>
-
-  <div class="container wrapper">
-    <load src="partials/header.html" />
-    <div class="shop-main-flex">
-      <div class="shopping-list-hidden">
-        <load src="partials/su.html" />
+  <body>
+    <div class="container wrapper">
+      <load src="partials/header.html" />
+      <div class="shop-main-flex">
+        <div class="shopping-list-hidden">
+          <load src="partials/su.html" />
+        </div>
+        <load src="partials/shopping-main.html" />
       </div>
-      <load src="partials/shopping-main.html" />
-
+      <load src="partials/back-to-top.html" />
     </div>
-  </div>
 
-  <script type="module" src="./shoppinglist.js"></script>
-
-</body>
-
+    <script type="module" src="./shoppinglist.js"></script>
+    <script type="module" src="./js/back-to-top.js"></script>
+  </body>
 </html>
