--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -10,14 +10,14 @@
 
   <body>
     <div class="container wrapper">
-      <load src="partials/header.html" />
+      <load src="./partials/header.html" />
       <div class="shop-main-flex">
         <div class="shopping-list-hidden">
-          <load src="partials/su.html" />
+          <load src="./partials/su.html" />
         </div>
-        <load src="partials/shopping-main.html" />
+        <load src="./partials/shopping-main.html" />
       </div>
-      <load src="partials/back-to-top.html" />
+      <load src="./partials/back-to-top.html" />
     </div>
 
     <script type="module" src="./shoppinglist.js"></script>
