--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Bookshelf</title>
     <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
 
   <body>
     <div class="container wrapper">
+      
       <load src="./partials/header.html" />
       <div class="shop-main-flex">
         <div class="shopping-list-hidden">
@@ -22,5 +24,6 @@
 
     <script type="module" src="./shoppinglist.js"></script>
     <script type="module" src="./js/back-to-top.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
