--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           </div>
         </section>
       </main>
-
+      <load src="./partials/footer.html" />
       <section>
 
         <load src="./partials/popup-menu.html" />
